<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment_card_set_detail.CardSetDetailFragment">

  <data>
    <variable
        name="viewmodel"
        type="de.niku.ttl.view.fragment_card_set_detail.CardSetDetailViewModel"/>
  </data>

  <androidx.coordinatorlayout.widget.CoordinatorLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/white"
  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_marginLeft="@dimen/spacing_xlarge"
          android:layout_marginBottom="@dimen/spacing_normal"
          >

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/App.TextView.Subtitle.Accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_settings"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginBottom="@dimen/spacing_normal"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:checkedButton="@={viewmodel.vdLearnMode}"
            >

          <RadioButton
              android:id="@+id/rb_mode_normal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/learn_normal_mode"
              />

          <RadioButton
              android:id="@+id/rb_mode_quiz"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/learn_quiz_mode"
              />

        </RadioGroup>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vice_versa"
            android:enabled="@{viewmodel.vdViceVersaEnabled}"
            android:checked="@={viewmodel.vdViceVersa}"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shuffle"
            android:checked="@={viewmodel.vdShuffle}"
            />

      </LinearLayout>

      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/colorPrimary"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_marginLeft="@dimen/spacing_xlarge"
          android:layout_marginBottom="@dimen/spacing_normal"
          >

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/App.TextView.Subtitle.Accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginBottom="@dimen/spacing_normal"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

          <androidx.appcompat.widget.AppCompatTextView
              style="@style/App.TextView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@{@string/last_time_played + `:`}"
              tools:text="@string/last_time_played"
              android:minEms="8"
              />
          <androidx.appcompat.widget.AppCompatTextView
              style="@style/App.TextView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              tools:text="22.05.2019 16:22"
              android:text="@{viewmodel.vdLastTimePlayed}"
              />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_tiny"
            >

          <androidx.appcompat.widget.AppCompatTextView
              style="@style/App.TextView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@{@string/completed + `:`}"
              tools:text="Completed"
              android:minEms="8"
              />
          <androidx.appcompat.widget.AppCompatTextView
              style="@style/App.TextView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              tools:text="20"
              android:text="@{String.format(`%.2f`, viewmodel.vdCompleted) + `%`}"
              />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/spacing_xlarge"
            >

          <ProgressBar
              style="@style/Widget.AppCompat.ProgressBar.Horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:progressBackgroundTint="@color/black"
              android:min="0"
              android:max="100"
              tools:progress="20"
              android:progress="@{viewmodel.vdCompleted.intValue()}"
              />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

          <androidx.appcompat.widget.AppCompatTextView
              style="@style/App.TextView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@{@string/correct + `:`}"
              tools:text="Correct"
              android:minEms="8"
              />
          <androidx.appcompat.widget.AppCompatTextView
              style="@style/App.TextView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              tools:text="20"
              android:text="@{String.format(`%.2f`, viewmodel.vdCorrect) + `%`}"
              />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/spacing_xlarge"
            >

          <ProgressBar
              style="@style/Widget.AppCompat.ProgressBar.Horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:progressBackgroundTint="@color/black"
              android:min="0"
              android:max="100"
              tools:progress="20"
              android:progress="@{viewmodel.vdCorrect.intValue()}"
              />

        </LinearLayout>

      </LinearLayout>

      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:paddingLeft="@dimen/spacing_normal"
        android:paddingRight="@dimen/spacing_normal"
        android:paddingTop="@dimen/spacing_small"
        android:paddingBottom="@dimen/spacing_small"
        >

      <com.google.android.material.button.MaterialButton
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/start_lerning"
          android:onClick="@{(v) -> viewmodel.onStartLearningClick()}"
      />

    </LinearLayout>


  </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
